--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "http://morenza.github.io/pokemon-project",
+{"homepage": "http://Morenza.github.io/pokemon-project",
   "name": "pokemon-project",
   "version": "0.1.0",
   "private": true,
