--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
-{"homepage": "http://Morenza.github.io/pokemon-project",
+
+
+{
   "name": "pokemon-project",
   "version": "0.1.0",
   "private": true,
@@ -20,9 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
